# skyppy

./: .gitignore  Dockerfile  README.md  active_docker.sh  codespaces.sh  config.yaml  docker-compose.yaml  index.html  long-press-event.min.js  poetry_test.sh  pyproject.toml  requirements.txt  run_local.py  run_local_with_gunicorn.sh  skyppy.css  skyppy.js  status.db  test.json  test2.json
.config/: rome.rjson
ina_flask/: .gitignore  Dockerfile  active_docker.sh  active_docker_dev.sh  config.py  config.yaml  docker-compose.yaml  ina_cache.py  ina_flask.py  ina_tools.py  log.txt  logger.py  main.py  requirements.txt  skyppy_core.py  status.db  wsgi.py
ina_flask/ina_lib/: audio_segmenter.py  check_video_lenght.py  check_video_length.py  db.py  download_audio.py  get_video_id.py  hook_progression_equal_interval.py  ina_cache.py  stats.py  status.py
ina_flask/integration_test/: test_process.py
ina_flask/log/: FSmtbSYE8pg.json  Q-TQQE1y68c.json  StLcOSSXDQw.json  udVvb5giPcg.json
ina_flask/static/: skyppy.css  skyppy.js  skyppy2.js  skyppy_stats.js
ina_flask/templates/: index.html  stats.html
ina_flask/test/: audio_test.mp3.part  test_audio_segmenter.py  test_download_audio.py
ina_flask/tool/: check_video_lenght.py
tests/: test_audio_segmenter.py  test_check_video_lenght.py  test_download_audio.py  test_flask.py  test_get_video_id.py  test_ina_tools.py  test_version.py
tests/integration_test/: test_process.py
