[tool.poetry]
name = "ina_flask"
version = "0.1.0"
description = ""
authors = ["Marco Scarselli <scarselli@gmail.com>", "Mark Boas <mark.boas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"
SQLAlchemy = "^1.4.41"
Flask = "^2.2.2"
tensorflow = "2.2.0"
keras = "2.4.3"
protobuf = "3.20.0"
youtube_dl = "^2021.12.17"
numpy = "1.23.4"
pandas = "1.5.1"
gunicorn = "^20.1.0"
Flask-Cors = "^3.0.10"
PyYAML = "^6.0"
watchfiles = "^0.17.0"
inaSpeechSegmenter = "^0.7.3"
loguru = "^0.6.0"
yt-dlp = "^2022.11.11"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.4"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.8.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
start = "ina_flask.main:start"

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



